# User-Tool---Web-App

./: Dockerfile  README.md  main.py  pyproject.toml
SQL_QUERIES/: CREATE_TABLES_MAINT_CALENDAR.sql  CREATE_TABLES_PLANTS.sql  CREATE_TABLES_PLANT_COST.sql
usertool/: __init__.py  forms.py  models.py  routes.py  treatments.py
usertool/static/css/: style.css
usertool/static/maint_calendar/: maint_calendar.xlsx
usertool/static/models/: maint_calendar.xlsx
usertool/static/plant_cost/: plant_cost.xlsx
usertool/templates/: home.html  navbar.html  update_maint_calendar.html  update_plant_cost.html
